sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/README.md
# @azure/arm-oracledatabase client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-oracledatabase in some common scenarios.

| **File Name**                                                                                                                   | **Description**                                                                                                                                                                                         |
| ------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [autonomousDatabaseBackupsCreateOrUpdateSample.ts][autonomousdatabasebackupscreateorupdatesample]                               | create a AutonomousDatabaseBackup x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseBackups_CreateOrUpdate_MaximumSet_Gen.json                                                                   |
| [autonomousDatabaseBackupsDeleteSample.ts][autonomousdatabasebackupsdeletesample]                                               | delete a AutonomousDatabaseBackup x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseBackups_Delete_MaximumSet_Gen.json                                                                           |
| [autonomousDatabaseBackupsGetSample.ts][autonomousdatabasebackupsgetsample]                                                     | get a AutonomousDatabaseBackup x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseBackups_Get_MaximumSet_Gen.json                                                                                 |
| [autonomousDatabaseBackupsListByParentSample.ts][autonomousdatabasebackupslistbyparentsample]                                   | list AutonomousDatabaseBackup resources by AutonomousDatabase x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseBackups_ListByParent_MaximumSet_Gen.json                                         |
| [autonomousDatabaseBackupsUpdateSample.ts][autonomousdatabasebackupsupdatesample]                                               | update a AutonomousDatabaseBackup x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseBackups_Update_MaximumSet_Gen.json                                                                           |
| [autonomousDatabaseCharacterSetsGetSample.ts][autonomousdatabasecharactersetsgetsample]                                         | get a AutonomousDatabaseCharacterSet x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseCharacterSets_Get_MaximumSet_Gen.json                                                                     |
| [autonomousDatabaseCharacterSetsListByLocationSample.ts][autonomousdatabasecharactersetslistbylocationsample]                   | list AutonomousDatabaseCharacterSet resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseCharacterSets_ListByLocation_MaximumSet_Gen.json                 |
| [autonomousDatabaseNationalCharacterSetsGetSample.ts][autonomousdatabasenationalcharactersetsgetsample]                         | get a AutonomousDatabaseNationalCharacterSet x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseNationalCharacterSets_Get_MaximumSet_Gen.json                                                     |
| [autonomousDatabaseNationalCharacterSetsListByLocationSample.ts][autonomousdatabasenationalcharactersetslistbylocationsample]   | list AutonomousDatabaseNationalCharacterSet resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseNationalCharacterSets_ListByLocation_MaximumSet_Gen.json |
| [autonomousDatabaseVersionsGetSample.ts][autonomousdatabaseversionsgetsample]                                                   | get a AutonomousDbVersion x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseVersions_Get_MaximumSet_Gen.json                                                                                     |
| [autonomousDatabaseVersionsListByLocationSample.ts][autonomousdatabaseversionslistbylocationsample]                             | list AutonomousDbVersion resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/AutonomousDatabaseVersions_ListByLocation_MaximumSet_Gen.json                                 |
| [autonomousDatabasesActionSample.ts][autonomousdatabasesactionsample]                                                           | perform Lifecycle Management Action on Autonomous Database x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Action_MaximumSet_Gen.json                                                        |
| [autonomousDatabasesChangeDisasterRecoveryConfigurationSample.ts][autonomousdatabaseschangedisasterrecoveryconfigurationsample] | perform ChangeDisasterRecoveryConfiguration action on Autonomous Database x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_ChangeDisasterRecoveryConfiguration_MaximumSet_Gen.json            |
| [autonomousDatabasesCreateOrUpdateSample.ts][autonomousdatabasescreateorupdatesample]                                           | create a AutonomousDatabase x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_CreateOrUpdate_MaximumSet_Gen.json                                                                               |
| [autonomousDatabasesDeleteSample.ts][autonomousdatabasesdeletesample]                                                           | delete a AutonomousDatabase x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Delete_MaximumSet_Gen.json                                                                                       |
| [autonomousDatabasesFailoverSample.ts][autonomousdatabasesfailoversample]                                                       | perform failover action on Autonomous Database x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Failover_MaximumSet_Gen.json                                                                  |
| [autonomousDatabasesGenerateWalletSample.ts][autonomousdatabasesgeneratewalletsample]                                           | generate wallet action on Autonomous Database x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_GenerateWallet_MaximumSet_Gen.json                                                             |
| [autonomousDatabasesGetSample.ts][autonomousdatabasesgetsample]                                                                 | get a AutonomousDatabase x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Get_MaximumSet_Gen.json                                                                                             |
| [autonomousDatabasesListByResourceGroupSample.ts][autonomousdatabaseslistbyresourcegroupsample]                                 | list AutonomousDatabase resources by resource group x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_ListByResourceGroup_MaximumSet_Gen.json                                                  |
| [autonomousDatabasesListBySubscriptionSample.ts][autonomousdatabaseslistbysubscriptionsample]                                   | list AutonomousDatabase resources by subscription ID x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_ListBySubscription_MaximumSet_Gen.json                                                  |
| [autonomousDatabasesRestoreSample.ts][autonomousdatabasesrestoresample]                                                         | restores an Autonomous Database based on the provided request parameters. x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Restore_MaximumSet_Gen.json                                        |
| [autonomousDatabasesShrinkSample.ts][autonomousdatabasesshrinksample]                                                           | this operation shrinks the current allocated storage down to the current actual used data storage. x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Shrink_MaximumSet_Gen.json                |
| [autonomousDatabasesSwitchoverSample.ts][autonomousdatabasesswitchoversample]                                                   | perform switchover action on Autonomous Database x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Switchover_MaximumSet_Gen.json                                                              |
| [autonomousDatabasesUpdateSample.ts][autonomousdatabasesupdatesample]                                                           | update a AutonomousDatabase x-ms-original-file: 2025-11-01-preview/AutonomousDatabases_Update_MaximumSet_Gen.json                                                                                       |
| [cloudExadataInfrastructuresAddStorageCapacitySample.ts][cloudexadatainfrastructuresaddstoragecapacitysample]                   | perform add storage capacity on exadata infra x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_AddStorageCapacity_MaximumSet_Gen.json                                                 |
| [cloudExadataInfrastructuresConfigureExascaleSample.ts][cloudexadatainfrastructuresconfigureexascalesample]                     | configures Exascale on Cloud exadata infrastructure resource x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_ConfigureExascale_MaximumSet_Gen.json                                   |
| [cloudExadataInfrastructuresCreateOrUpdateSample.ts][cloudexadatainfrastructurescreateorupdatesample]                           | create a CloudExadataInfrastructure x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_CreateOrUpdate_MaximumSet_Gen.json                                                               |
| [cloudExadataInfrastructuresDeleteSample.ts][cloudexadatainfrastructuresdeletesample]                                           | delete a CloudExadataInfrastructure x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_Delete_MaximumSet_Gen.json                                                                       |
| [cloudExadataInfrastructuresGetSample.ts][cloudexadatainfrastructuresgetsample]                                                 | get a CloudExadataInfrastructure x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_Get_MaximumSet_Gen.json                                                                             |
| [cloudExadataInfrastructuresListByResourceGroupSample.ts][cloudexadatainfrastructureslistbyresourcegroupsample]                 | list CloudExadataInfrastructure resources by resource group x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_ListByResourceGroup_MaximumSet_Gen.json                                  |
| [cloudExadataInfrastructuresListBySubscriptionSample.ts][cloudexadatainfrastructureslistbysubscriptionsample]                   | list CloudExadataInfrastructure resources by subscription ID x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_ListBySubscription_MaximumSet_Gen.json                                  |
| [cloudExadataInfrastructuresUpdateSample.ts][cloudexadatainfrastructuresupdatesample]                                           | update a CloudExadataInfrastructure x-ms-original-file: 2025-11-01-preview/CloudExadataInfrastructures_Update_MaximumSet_Gen.json                                                                       |
| [cloudVmClustersAddVmsSample.ts][cloudvmclustersaddvmssample]                                                                   | add VMs to the VM Cluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_AddVms_MaximumSet_Gen.json                                                                                             |
| [cloudVmClustersCreateOrUpdateSample.ts][cloudvmclusterscreateorupdatesample]                                                   | create a CloudVmCluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_CreateOrUpdate_MaximumSet_Gen.json                                                                                       |
| [cloudVmClustersDeleteSample.ts][cloudvmclustersdeletesample]                                                                   | delete a CloudVmCluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_Delete_MaximumSet_Gen.json                                                                                               |
| [cloudVmClustersGetSample.ts][cloudvmclustersgetsample]                                                                         | get a CloudVmCluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_Get_MaximumSet_Gen.json                                                                                                     |
| [cloudVmClustersListByResourceGroupSample.ts][cloudvmclusterslistbyresourcegroupsample]                                         | list CloudVmCluster resources by resource group x-ms-original-file: 2025-11-01-preview/CloudVmClusters_ListByResourceGroup_MaximumSet_Gen.json                                                          |
| [cloudVmClustersListBySubscriptionSample.ts][cloudvmclusterslistbysubscriptionsample]                                           | list CloudVmCluster resources by subscription ID x-ms-original-file: 2025-11-01-preview/CloudVmClusters_ListBySubscription_MaximumSet_Gen.json                                                          |
| [cloudVmClustersListPrivateIpAddressesSample.ts][cloudvmclusterslistprivateipaddressessample]                                   | list Private IP Addresses by the provided filter x-ms-original-file: 2025-11-01-preview/CloudVmClusters_ListPrivateIpAddresses_MaximumSet_Gen.json                                                      |
| [cloudVmClustersRemoveVmsSample.ts][cloudvmclustersremovevmssample]                                                             | remove VMs from the VM Cluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_RemoveVms_MaximumSet_Gen.json                                                                                     |
| [cloudVmClustersUpdateSample.ts][cloudvmclustersupdatesample]                                                                   | update a CloudVmCluster x-ms-original-file: 2025-11-01-preview/CloudVmClusters_Update_MaximumSet_Gen.json                                                                                               |
| [dbNodesActionSample.ts][dbnodesactionsample]                                                                                   | vM actions on DbNode of VM Cluster by the provided filter x-ms-original-file: 2025-11-01-preview/DbNodes_Action_MaximumSet_Gen.json                                                                     |
| [dbNodesGetSample.ts][dbnodesgetsample]                                                                                         | get a DbNode x-ms-original-file: 2025-11-01-preview/DbNodes_Get_MaximumSet_Gen.json                                                                                                                     |
| [dbNodesListByParentSample.ts][dbnodeslistbyparentsample]                                                                       | list DbNode resources by CloudVmCluster x-ms-original-file: 2025-11-01-preview/DbNodes_ListByParent_MaximumSet_Gen.json                                                                                 |
| [dbServersGetSample.ts][dbserversgetsample]                                                                                     | get a DbServer x-ms-original-file: 2025-11-01-preview/DbServers_Get_MaximumSet_Gen.json                                                                                                                 |
| [dbServersListByParentSample.ts][dbserverslistbyparentsample]                                                                   | list DbServer resources by CloudExadataInfrastructure x-ms-original-file: 2025-11-01-preview/DbServers_ListByParent_MaximumSet_Gen.json                                                                 |
| [dbSystemShapesGetSample.ts][dbsystemshapesgetsample]                                                                           | get a DbSystemShape x-ms-original-file: 2025-11-01-preview/DbSystemShapes_Get_MaximumSet_Gen.json                                                                                                       |
| [dbSystemShapesListByLocationSample.ts][dbsystemshapeslistbylocationsample]                                                     | list DbSystemShape resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/DbSystemShapes_ListByLocation_MaximumSet_Gen.json                                                   |
| [dbSystemsCreateOrUpdateSample.ts][dbsystemscreateorupdatesample]                                                               | create a DbSystem x-ms-original-file: 2025-11-01-preview/DbSystems_CreateOrUpdate_MaximumSet_Gen.json                                                                                                   |
| [dbSystemsDeleteSample.ts][dbsystemsdeletesample]                                                                               | delete a DbSystem x-ms-original-file: 2025-11-01-preview/DbSystems_Delete_MaximumSet_Gen.json                                                                                                           |
| [dbSystemsGetSample.ts][dbsystemsgetsample]                                                                                     | get a DbSystem x-ms-original-file: 2025-11-01-preview/DbSystems_Get_MaximumSet_Gen.json                                                                                                                 |
| [dbSystemsListByResourceGroupSample.ts][dbsystemslistbyresourcegroupsample]                                                     | list DbSystem resources by resource group x-ms-original-file: 2025-11-01-preview/DbSystems_ListByResourceGroup_MaximumSet_Gen.json                                                                      |
| [dbSystemsListBySubscriptionSample.ts][dbsystemslistbysubscriptionsample]                                                       | list DbSystem resources by subscription ID x-ms-original-file: 2025-11-01-preview/DbSystems_ListBySubscription_MaximumSet_Gen.json                                                                      |
| [dbSystemsUpdateSample.ts][dbsystemsupdatesample]                                                                               | update a DbSystem x-ms-original-file: 2025-11-01-preview/DbSystems_Update_MaximumSet_Gen.json                                                                                                           |
| [dbVersionsGetSample.ts][dbversionsgetsample]                                                                                   | get a DbVersion x-ms-original-file: 2025-11-01-preview/DbVersions_Get_MaximumSet_Gen.json                                                                                                               |
| [dbVersionsListByLocationSample.ts][dbversionslistbylocationsample]                                                             | list DbVersion resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/DbVersions_ListByLocation_MaximumSet_Gen.json                                                           |
| [dnsPrivateViewsGetSample.ts][dnsprivateviewsgetsample]                                                                         | get a DnsPrivateView x-ms-original-file: 2025-11-01-preview/DnsPrivateViews_Get_MaximumSet_Gen.json                                                                                                     |
| [dnsPrivateViewsListByLocationSample.ts][dnsprivateviewslistbylocationsample]                                                   | list DnsPrivateView resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/DnsPrivateViews_ListByLocation_MaximumSet_Gen.json                                                 |
| [dnsPrivateZonesGetSample.ts][dnsprivatezonesgetsample]                                                                         | get a DnsPrivateZone x-ms-original-file: 2025-11-01-preview/DnsPrivateZones_Get_MaximumSet_Gen.json                                                                                                     |
| [dnsPrivateZonesListByLocationSample.ts][dnsprivatezoneslistbylocationsample]                                                   | list DnsPrivateZone resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/DnsPrivateZones_ListByLocation_MaximumSet_Gen.json                                                 |
| [exadbVmClustersCreateOrUpdateSample.ts][exadbvmclusterscreateorupdatesample]                                                   | create a ExadbVmCluster x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_CreateOrUpdate_MaximumSet_Gen.json                                                                                       |
| [exadbVmClustersDeleteSample.ts][exadbvmclustersdeletesample]                                                                   | delete a ExadbVmCluster x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_Delete_MaximumSet_Gen.json                                                                                               |
| [exadbVmClustersGetSample.ts][exadbvmclustersgetsample]                                                                         | get a ExadbVmCluster x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_Get_MaximumSet_Gen.json                                                                                                     |
| [exadbVmClustersListByResourceGroupSample.ts][exadbvmclusterslistbyresourcegroupsample]                                         | list ExadbVmCluster resources by resource group x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_ListByResourceGroup_MaximumSet_Gen.json                                                          |
| [exadbVmClustersListBySubscriptionSample.ts][exadbvmclusterslistbysubscriptionsample]                                           | list ExadbVmCluster resources by subscription ID x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_ListBySubscription_MaximumSet_Gen.json                                                          |
| [exadbVmClustersRemoveVmsSample.ts][exadbvmclustersremovevmssample]                                                             | remove VMs from the VM Cluster x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_RemoveVms_MaximumSet_Gen.json                                                                                     |
| [exadbVmClustersUpdateSample.ts][exadbvmclustersupdatesample]                                                                   | update a ExadbVmCluster x-ms-original-file: 2025-11-01-preview/ExadbVmClusters_Update_MaximumSet_Gen.json                                                                                               |
| [exascaleDbNodesActionSample.ts][exascaledbnodesactionsample]                                                                   | vM actions on DbNode of ExadbVmCluster by the provided filter x-ms-original-file: 2025-11-01-preview/ExascaleDbNodes_Action_MaximumSet_Gen.json                                                         |
| [exascaleDbNodesGetSample.ts][exascaledbnodesgetsample]                                                                         | get a ExascaleDbNode x-ms-original-file: 2025-11-01-preview/ExascaleDbNodes_Get_MaximumSet_Gen.json                                                                                                     |
| [exascaleDbNodesListByParentSample.ts][exascaledbnodeslistbyparentsample]                                                       | list ExascaleDbNode resources by ExadbVmCluster x-ms-original-file: 2025-11-01-preview/ExascaleDbNodes_ListByParent_MaximumSet_Gen.json                                                                 |
| [exascaleDbStorageVaultsCreateSample.ts][exascaledbstoragevaultscreatesample]                                                   | create a ExascaleDbStorageVault x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_Create_MaximumSet_Gen.json                                                                               |
| [exascaleDbStorageVaultsDeleteSample.ts][exascaledbstoragevaultsdeletesample]                                                   | delete a ExascaleDbStorageVault x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_Delete_MaximumSet_Gen.json                                                                               |
| [exascaleDbStorageVaultsGetSample.ts][exascaledbstoragevaultsgetsample]                                                         | get a ExascaleDbStorageVault x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_Get_MaximumSet_Gen.json                                                                                     |
| [exascaleDbStorageVaultsListByResourceGroupSample.ts][exascaledbstoragevaultslistbyresourcegroupsample]                         | list ExascaleDbStorageVault resources by resource group x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_ListByResourceGroup_MaximumSet_Gen.json                                          |
| [exascaleDbStorageVaultsListBySubscriptionSample.ts][exascaledbstoragevaultslistbysubscriptionsample]                           | list ExascaleDbStorageVault resources by subscription ID x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_ListBySubscription_MaximumSet_Gen.json                                          |
| [exascaleDbStorageVaultsUpdateSample.ts][exascaledbstoragevaultsupdatesample]                                                   | update a ExascaleDbStorageVault x-ms-original-file: 2025-11-01-preview/ExascaleDbStorageVaults_Update_MaximumSet_Gen.json                                                                               |
| [flexComponentsGetSample.ts][flexcomponentsgetsample]                                                                           | get a FlexComponent x-ms-original-file: 2025-11-01-preview/FlexComponents_Get_MaximumSet_Gen.json                                                                                                       |
| [flexComponentsListByParentSample.ts][flexcomponentslistbyparentsample]                                                         | list FlexComponent resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/FlexComponents_ListByParent_MaximumSet_Gen.json                                                     |
| [giMinorVersionsGetSample.ts][giminorversionsgetsample]                                                                         | get a GiMinorVersion x-ms-original-file: 2025-11-01-preview/GiMinorVersions_Get_MaximumSet_Gen.json                                                                                                     |
| [giMinorVersionsListByParentSample.ts][giminorversionslistbyparentsample]                                                       | list GiMinorVersion resources by GiVersion x-ms-original-file: 2025-11-01-preview/GiMinorVersions_ListByParent_MaximumSet_Gen.json                                                                      |
| [giVersionsGetSample.ts][giversionsgetsample]                                                                                   | get a GiVersion x-ms-original-file: 2025-11-01-preview/GiVersions_Get_MaximumSet_Gen.json                                                                                                               |
| [giVersionsListByLocationSample.ts][giversionslistbylocationsample]                                                             | list GiVersion resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/GiVersions_ListByLocation_MaximumSet_Gen.json                                                           |
| [networkAnchorsCreateOrUpdateSample.ts][networkanchorscreateorupdatesample]                                                     | create a NetworkAnchor x-ms-original-file: 2025-11-01-preview/NetworkAnchors_CreateOrUpdate_MaximumSet_Gen.json                                                                                         |
| [networkAnchorsDeleteSample.ts][networkanchorsdeletesample]                                                                     | delete a NetworkAnchor x-ms-original-file: 2025-11-01-preview/NetworkAnchors_Delete_MaximumSet_Gen.json                                                                                                 |
| [networkAnchorsGetSample.ts][networkanchorsgetsample]                                                                           | get a NetworkAnchor x-ms-original-file: 2025-11-01-preview/NetworkAnchors_Get_MaximumSet_Gen.json                                                                                                       |
| [networkAnchorsListByResourceGroupSample.ts][networkanchorslistbyresourcegroupsample]                                           | list NetworkAnchor resources by resource group x-ms-original-file: 2025-11-01-preview/NetworkAnchors_ListByResourceGroup_MaximumSet_Gen.json                                                            |
| [networkAnchorsListBySubscriptionSample.ts][networkanchorslistbysubscriptionsample]                                             | list NetworkAnchor resources by subscription ID x-ms-original-file: 2025-11-01-preview/NetworkAnchors_ListBySubscription_MaximumSet_Gen.json                                                            |
| [networkAnchorsUpdateSample.ts][networkanchorsupdatesample]                                                                     | update a NetworkAnchor x-ms-original-file: 2025-11-01-preview/NetworkAnchors_Update_MaximumSet_Gen.json                                                                                                 |
| [operationsListSample.ts][operationslistsample]                                                                                 | list the operations for the provider x-ms-original-file: 2025-11-01-preview/Operations_List_MaximumSet_Gen.json                                                                                         |
| [oracleSubscriptionsAddAzureSubscriptionsSample.ts][oraclesubscriptionsaddazuresubscriptionssample]                             | add Azure Subscriptions x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_AddAzureSubscriptions_MaximumSet_Gen.json                                                                            |
| [oracleSubscriptionsCreateOrUpdateSample.ts][oraclesubscriptionscreateorupdatesample]                                           | create a OracleSubscription x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_CreateOrUpdate_MaximumSet_Gen.json                                                                               |
| [oracleSubscriptionsDeleteSample.ts][oraclesubscriptionsdeletesample]                                                           | delete a OracleSubscription x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_Delete_MaximumSet_Gen.json                                                                                       |
| [oracleSubscriptionsGetSample.ts][oraclesubscriptionsgetsample]                                                                 | get a OracleSubscription x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_Get_MaximumSet_Gen.json                                                                                             |
| [oracleSubscriptionsListActivationLinksSample.ts][oraclesubscriptionslistactivationlinkssample]                                 | list Activation Links x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_ListActivationLinks_MaximumSet_Gen.json                                                                                |
| [oracleSubscriptionsListBySubscriptionSample.ts][oraclesubscriptionslistbysubscriptionsample]                                   | list OracleSubscription resources by subscription ID x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_ListBySubscription_MaximumSet_Gen.json                                                  |
| [oracleSubscriptionsListCloudAccountDetailsSample.ts][oraclesubscriptionslistcloudaccountdetailssample]                         | list Cloud Account Details x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_ListCloudAccountDetails_MaximumSet_Gen.json                                                                       |
| [oracleSubscriptionsListSaasSubscriptionDetailsSample.ts][oraclesubscriptionslistsaassubscriptiondetailssample]                 | list Saas Subscription Details x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_ListSaasSubscriptionDetails_MaximumSet_Gen.json                                                               |
| [oracleSubscriptionsUpdateSample.ts][oraclesubscriptionsupdatesample]                                                           | update a OracleSubscription x-ms-original-file: 2025-11-01-preview/OracleSubscriptions_Update_MaximumSet_Gen.json                                                                                       |
| [resourceAnchorsCreateOrUpdateSample.ts][resourceanchorscreateorupdatesample]                                                   | create a ResourceAnchor x-ms-original-file: 2025-11-01-preview/ResourceAnchors_CreateOrUpdate_MaximumSet_Gen.json                                                                                       |
| [resourceAnchorsDeleteSample.ts][resourceanchorsdeletesample]                                                                   | delete a ResourceAnchor x-ms-original-file: 2025-11-01-preview/ResourceAnchors_Delete_MaximumSet_Gen.json                                                                                               |
| [resourceAnchorsGetSample.ts][resourceanchorsgetsample]                                                                         | get a ResourceAnchor x-ms-original-file: 2025-11-01-preview/ResourceAnchors_Get_MaximumSet_Gen.json                                                                                                     |
| [resourceAnchorsListByResourceGroupSample.ts][resourceanchorslistbyresourcegroupsample]                                         | list ResourceAnchor resources by resource group x-ms-original-file: 2025-11-01-preview/ResourceAnchors_ListByResourceGroup_MaximumSet_Gen.json                                                          |
| [resourceAnchorsListBySubscriptionSample.ts][resourceanchorslistbysubscriptionsample]                                           | list ResourceAnchor resources by subscription ID x-ms-original-file: 2025-11-01-preview/ResourceAnchors_ListBySubscription_MaximumSet_Gen.json                                                          |
| [resourceAnchorsUpdateSample.ts][resourceanchorsupdatesample]                                                                   | update a ResourceAnchor x-ms-original-file: 2025-11-01-preview/ResourceAnchors_Update_MaximumSet_Gen.json                                                                                               |
| [systemVersionsGetSample.ts][systemversionsgetsample]                                                                           | get a SystemVersion x-ms-original-file: 2025-11-01-preview/SystemVersions_Get_MaximumSet_Gen.json                                                                                                       |
| [systemVersionsListByLocationSample.ts][systemversionslistbylocationsample]                                                     | list SystemVersion resources by SubscriptionLocationResource x-ms-original-file: 2025-11-01-preview/SystemVersions_ListByLocation_MaximumSet_Gen.json                                                   |
| [virtualNetworkAddressesCreateOrUpdateSample.ts][virtualnetworkaddressescreateorupdatesample]                                   | create a VirtualNetworkAddress x-ms-original-file: 2025-11-01-preview/VirtualNetworkAddresses_CreateOrUpdate_MaximumSet_Gen.json                                                                        |
| [virtualNetworkAddressesDeleteSample.ts][virtualnetworkaddressesdeletesample]                                                   | delete a VirtualNetworkAddress x-ms-original-file: 2025-11-01-preview/VirtualNetworkAddresses_Delete_MaximumSet_Gen.json                                                                                |
| [virtualNetworkAddressesGetSample.ts][virtualnetworkaddressesgetsample]                                                         | get a VirtualNetworkAddress x-ms-original-file: 2025-11-01-preview/VirtualNetworkAddresses_Get_MaximumSet_Gen.json                                                                                      |
| [virtualNetworkAddressesListByParentSample.ts][virtualnetworkaddresseslistbyparentsample]                                       | list VirtualNetworkAddress resources by CloudVmCluster x-ms-original-file: 2025-11-01-preview/VirtualNetworkAddresses_ListByParent_MaximumSet_Gen.json                                                  |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/autonomousDatabaseBackupsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/autonomousDatabaseBackupsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[autonomousdatabasebackupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseBackupsCreateOrUpdateSample.ts
[autonomousdatabasebackupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseBackupsDeleteSample.ts
[autonomousdatabasebackupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseBackupsGetSample.ts
[autonomousdatabasebackupslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseBackupsListByParentSample.ts
[autonomousdatabasebackupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseBackupsUpdateSample.ts
[autonomousdatabasecharactersetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseCharacterSetsGetSample.ts
[autonomousdatabasecharactersetslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseCharacterSetsListByLocationSample.ts
[autonomousdatabasenationalcharactersetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseNationalCharacterSetsGetSample.ts
[autonomousdatabasenationalcharactersetslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseNationalCharacterSetsListByLocationSample.ts
[autonomousdatabaseversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseVersionsGetSample.ts
[autonomousdatabaseversionslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabaseVersionsListByLocationSample.ts
[autonomousdatabasesactionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesActionSample.ts
[autonomousdatabaseschangedisasterrecoveryconfigurationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesChangeDisasterRecoveryConfigurationSample.ts
[autonomousdatabasescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesCreateOrUpdateSample.ts
[autonomousdatabasesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesDeleteSample.ts
[autonomousdatabasesfailoversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesFailoverSample.ts
[autonomousdatabasesgeneratewalletsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesGenerateWalletSample.ts
[autonomousdatabasesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesGetSample.ts
[autonomousdatabaseslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesListByResourceGroupSample.ts
[autonomousdatabaseslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesListBySubscriptionSample.ts
[autonomousdatabasesrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesRestoreSample.ts
[autonomousdatabasesshrinksample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesShrinkSample.ts
[autonomousdatabasesswitchoversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesSwitchoverSample.ts
[autonomousdatabasesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/autonomousDatabasesUpdateSample.ts
[cloudexadatainfrastructuresaddstoragecapacitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudExadataInfrastructuresAddStorageCapacitySample.ts
[cloudexadatainfrastructuresconfigureexascalesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudExadataInfrastructuresConfigureExascaleSample.ts
[cloudexadatainfrastructurescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudExadataInfrastructuresCreateOrUpdateSample.ts
[cloudexadatainfrastructuresdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudExadataInfrastructuresDeleteSample.ts
[cloudexadatainfrastructuresgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudExadataInfrastructuresGetSample.ts
[cloudexadatainfrastructureslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudExadataInfrastructuresListByResourceGroupSample.ts
[cloudexadatainfrastructureslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudExadataInfrastructuresListBySubscriptionSample.ts
[cloudexadatainfrastructuresupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudExadataInfrastructuresUpdateSample.ts
[cloudvmclustersaddvmssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudVmClustersAddVmsSample.ts
[cloudvmclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudVmClustersCreateOrUpdateSample.ts
[cloudvmclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudVmClustersDeleteSample.ts
[cloudvmclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudVmClustersGetSample.ts
[cloudvmclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudVmClustersListByResourceGroupSample.ts
[cloudvmclusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudVmClustersListBySubscriptionSample.ts
[cloudvmclusterslistprivateipaddressessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudVmClustersListPrivateIpAddressesSample.ts
[cloudvmclustersremovevmssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudVmClustersRemoveVmsSample.ts
[cloudvmclustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/cloudVmClustersUpdateSample.ts
[dbnodesactionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbNodesActionSample.ts
[dbnodesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbNodesGetSample.ts
[dbnodeslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbNodesListByParentSample.ts
[dbserversgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbServersGetSample.ts
[dbserverslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbServersListByParentSample.ts
[dbsystemshapesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbSystemShapesGetSample.ts
[dbsystemshapeslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbSystemShapesListByLocationSample.ts
[dbsystemscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbSystemsCreateOrUpdateSample.ts
[dbsystemsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbSystemsDeleteSample.ts
[dbsystemsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbSystemsGetSample.ts
[dbsystemslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbSystemsListByResourceGroupSample.ts
[dbsystemslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbSystemsListBySubscriptionSample.ts
[dbsystemsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbSystemsUpdateSample.ts
[dbversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbVersionsGetSample.ts
[dbversionslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dbVersionsListByLocationSample.ts
[dnsprivateviewsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dnsPrivateViewsGetSample.ts
[dnsprivateviewslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dnsPrivateViewsListByLocationSample.ts
[dnsprivatezonesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dnsPrivateZonesGetSample.ts
[dnsprivatezoneslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/dnsPrivateZonesListByLocationSample.ts
[exadbvmclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exadbVmClustersCreateOrUpdateSample.ts
[exadbvmclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exadbVmClustersDeleteSample.ts
[exadbvmclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exadbVmClustersGetSample.ts
[exadbvmclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exadbVmClustersListByResourceGroupSample.ts
[exadbvmclusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exadbVmClustersListBySubscriptionSample.ts
[exadbvmclustersremovevmssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exadbVmClustersRemoveVmsSample.ts
[exadbvmclustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exadbVmClustersUpdateSample.ts
[exascaledbnodesactionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exascaleDbNodesActionSample.ts
[exascaledbnodesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exascaleDbNodesGetSample.ts
[exascaledbnodeslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exascaleDbNodesListByParentSample.ts
[exascaledbstoragevaultscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exascaleDbStorageVaultsCreateSample.ts
[exascaledbstoragevaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exascaleDbStorageVaultsDeleteSample.ts
[exascaledbstoragevaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exascaleDbStorageVaultsGetSample.ts
[exascaledbstoragevaultslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exascaleDbStorageVaultsListByResourceGroupSample.ts
[exascaledbstoragevaultslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exascaleDbStorageVaultsListBySubscriptionSample.ts
[exascaledbstoragevaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/exascaleDbStorageVaultsUpdateSample.ts
[flexcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/flexComponentsGetSample.ts
[flexcomponentslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/flexComponentsListByParentSample.ts
[giminorversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/giMinorVersionsGetSample.ts
[giminorversionslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/giMinorVersionsListByParentSample.ts
[giversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/giVersionsGetSample.ts
[giversionslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/giVersionsListByLocationSample.ts
[networkanchorscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/networkAnchorsCreateOrUpdateSample.ts
[networkanchorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/networkAnchorsDeleteSample.ts
[networkanchorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/networkAnchorsGetSample.ts
[networkanchorslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/networkAnchorsListByResourceGroupSample.ts
[networkanchorslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/networkAnchorsListBySubscriptionSample.ts
[networkanchorsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/networkAnchorsUpdateSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/operationsListSample.ts
[oraclesubscriptionsaddazuresubscriptionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/oracleSubscriptionsAddAzureSubscriptionsSample.ts
[oraclesubscriptionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/oracleSubscriptionsCreateOrUpdateSample.ts
[oraclesubscriptionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/oracleSubscriptionsDeleteSample.ts
[oraclesubscriptionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/oracleSubscriptionsGetSample.ts
[oraclesubscriptionslistactivationlinkssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/oracleSubscriptionsListActivationLinksSample.ts
[oraclesubscriptionslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/oracleSubscriptionsListBySubscriptionSample.ts
[oraclesubscriptionslistcloudaccountdetailssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/oracleSubscriptionsListCloudAccountDetailsSample.ts
[oraclesubscriptionslistsaassubscriptiondetailssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/oracleSubscriptionsListSaasSubscriptionDetailsSample.ts
[oraclesubscriptionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/oracleSubscriptionsUpdateSample.ts
[resourceanchorscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/resourceAnchorsCreateOrUpdateSample.ts
[resourceanchorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/resourceAnchorsDeleteSample.ts
[resourceanchorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/resourceAnchorsGetSample.ts
[resourceanchorslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/resourceAnchorsListByResourceGroupSample.ts
[resourceanchorslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/resourceAnchorsListBySubscriptionSample.ts
[resourceanchorsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/resourceAnchorsUpdateSample.ts
[systemversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/systemVersionsGetSample.ts
[systemversionslistbylocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/systemVersionsListByLocationSample.ts
[virtualnetworkaddressescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/virtualNetworkAddressesCreateOrUpdateSample.ts
[virtualnetworkaddressesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/virtualNetworkAddressesDeleteSample.ts
[virtualnetworkaddressesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/virtualNetworkAddressesGetSample.ts
[virtualnetworkaddresseslistbyparentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/oracledatabase/arm-oracledatabase/samples/v3/typescript/src/virtualNetworkAddressesListByParentSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-oracledatabase
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/oracledatabase/arm-oracledatabase/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
